# monarch-store

./: .SRCINFO  .cursorignore  .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND_FRONTEND_GAP_ANALYSIS.md  CONTRIBUTING.md  CategoryGrid_v0230.tsx  DIAGNOSTIC_REPORT.md  DOCUMENTATION.md  Dockerfile.build  FAQ.md  HeroSection_v0230_ACTUAL.tsx  LICENSE  PKGBUILD  PKGBUILD.template  PROGRESS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  TESTING.md  USER_GUIDE.md  arch_fix.sh  images.txt  index.html  odrs_debug_plan.txt  package-lock.json  package.json  release-checklist.md  release_v0.3.00_alpha1.sh  urls.txt  vite.config.ts
.agent/workflows/: push_to_github.md
.github/workflows/: build-builder.yml  release.yml
docker/: Dockerfile
docs/: APP_AUDIT.md  APP_STATE_AUDIT_v0.3.6.md  APTABASE_INTEGRATION.md  ARCHITECTURE.md  ARCH_NATIVE_STANDARDS_AUDIT_v0.3.5.md  ATOMIC_SYNC_AUDIT_v0.3.5.md  BLACK_BOX_SECURITY_TRUST_AUDIT_v0.3.5.md  COMPREHENSIVE_AUDIT_STATUS_REPORT.md  DEVELOPER.md  ERROR_SERVICE.md  GITHUB_RELEASE_TEMPLATE_v0.3.5.md  HELPER_ISSUES_AND_RESOLUTION_REPORT.md  INSTALL_UPDATE_AUDIT.md  INSTALL_UPDATE_COMPARISON.md  IRONCLAD_AUDIT_v0.3.5.md  LOCK_SAFETY_AUDIT.md  OMEGASCOPE_PREFLIGHT_REPORT.md  PREPARE_FOR_PUSH.md  PRODUCTION_RELEASE_AUDIT.md  READY_FOR_PUSH_v0.3.5.md  RELEASE_GATE_v0.3.5.md  RELEASE_PUSH_STEPS.md  REVIEWS.md  SECURITY_AUDIT_FORT_KNOX.md  SECURITY_AUDIT_v0.3.5.md  SETTINGS_UX_AUDIT.md  SETTINGS_UX_AUDIT_v0.3.5.md  TROUBLESHOOTING.md  UI_UX_AUDIT.md  UNIVERSAL_PROTOCOL_REPORT_CARD.md
release/: PKGBUILD
scripts/: capture-screenshots.mjs  monarch-permission-sanitizer.sh  release-finalize-pkgbuild.sh
security/apparmor/: README.md  usr.bin.monarch-store
src/: App.css  App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  com.monarch.store.policy  community.xml  monarch-store.desktop  monarch-store.metainfo.xml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/monarch-gui/: Cargo.toml  build.rs  build_errors.txt  com.monarch.store.policy  tauri.conf.json
src-tauri/monarch-gui/.cargo/: config.toml
src-tauri/monarch-gui/capabilities/: default.json
src-tauri/monarch-gui/icons/: icon.icns
src-tauri/monarch-gui/permissions/: app-commands.toml
src-tauri/monarch-gui/plugins/tauri-plugin-aptabase/src/: client.rs
src-tauri/monarch-gui/src/: alpm_progress.rs  alpm_read.rs  aur_api.rs  chaotic_api.rs  distro_context.rs  error_classifier.rs  flathub_api.rs  helper_client.rs  labels.rs  lib.rs  main.rs  metadata.rs  metadata_fix.rs  mocks.rs  models.rs  odrs_api.rs  pkgstats_api.rs  repair.rs  repo_db.rs  repo_db_tests.rs  repo_manager.rs  repo_setup.rs  reviews.rs  tests.rs  utils.rs
src-tauri/monarch-gui/src/commands/: mod.rs  package.rs  search.rs  system.rs  update.rs  utils.rs
src-tauri/monarch-helper/: Cargo.toml
src-tauri/monarch-helper/src/: alpm_errors.rs  logger.rs  main.rs  progress.rs  safe_transaction.rs  self_healer.rs  transactions.rs
src-tauri/monarch-helper/tests/: integration_test.rs  test_install_flow.sh
src-tauri/pacman-hooks/: monarch-store-refresh.hook
src-tauri/permissions/: app-commands.toml  default.toml
src-tauri/rules/: 10-monarch-store.rules
src-tauri/scripts/: monarch-store-refresh-cache  monarch-wrapper
src-tauri/src/: aur_api.rs  chaotic_api.rs  distro_context.rs  flathub_api.rs  lib.rs  main.rs  metadata.rs  models.rs  odrs_api.rs  pkgstats_api.rs  repair.rs  repo_db.rs  repo_manager.rs  repo_setup.rs  scm_api.rs  tests.rs  utils.rs
src-tauri/src/commands/: mod.rs  package.rs  reviews.rs  search.rs  system.rs  utils.rs
src/components/: CategoryGrid.tsx  ConfirmationModal.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorModal.tsx  HeroSection.tsx  InstallMonitor.tsx  LoadingScreen.tsx  OnboardingModal.tsx  PackageCard.tsx  PackageCardSkeleton.tsx  RepoBadge.tsx  RepoSelector.tsx  RepoSetupModal.tsx  SearchBar.tsx  Sidebar.tsx  SkeletonCard.tsx  SystemHealthSection.tsx  TitleBar.tsx  TrendingSection.tsx
src/context/: ErrorContext.tsx  RepoStatusContext.tsx  SessionPasswordContext.tsx  ToastContext.tsx  getErrorService.ts  useSessionPassword.ts
src/hooks/: useDistro.ts  useEscapeKey.ts  useFavorites.ts  useFocusTrap.ts  useInfiniteScroll.ts  usePackageMetadata.ts  useRatings.ts  useSearchHistory.ts  useSettings.ts  useSmartEssentials.ts  (+1 more)
(+21 files in other folders)
