[package]
name = "monarch-store"
version = "0.2.26"
description = "MonARCH Store - A premium software store for Arch Linux"
authors = ["MonARCH Store Contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monarch_store_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "blocking", "http2", "charset"] }
tokio = { version = "1", features = ["full"] }
appstream = "0.2.2"
moka = { version = "0.12", features = ["future"] }
base64 = "0.22.1"
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
xz2 = "0.1"
# alpm = "3.0" # specific version for libalpm wrappers
tauri-plugin-notification = "2"
regex = "1"
dirs = "6.0.0"
once_cell = "1.21.3"
lazy_static = "1.5.0"
chrono = "0.4.43"
tauri-plugin-updater = "2.9.0"
tauri-plugin-aptabase = { path = "./plugins/tauri-plugin-aptabase" }
async-trait = "0.1.89"
futures = "0.3.31"
tauri-plugin-fs = "2.4.5"

[dev-dependencies]
tempfile = "3.24.0"
